[unstore_unit] advance=no (safer)

--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -38,6 +38,7 @@
             [/then]
         [/if]
         [unstore_unit]
+            advance=no
             variable=healed_unit
         [/unstore_unit]
         {REBUILD_UNIT $x1 $y1 $unit.type}
@@ -68,6 +69,7 @@
     [/for]
 
     [unstore_unit]
+        advance=no
         variable=healed_unit
     [/unstore_unit]
     {REBUILD_UNIT $x2 $y2 $second_unit.type}
