--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -148,6 +148,7 @@
     [/set_variable]
 
     [unstore_unit]
+        advance=no
         variable=nfwme_wounded_unit
         {EVENT_UNIT}
     [/unstore_unit]
