--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -679,6 +679,7 @@
                                     x,y=1,1
                                     find_vacant=yes
                                     animate=no
+                                    advance=no
                                 [/unstore_unit]
                             [/then]
                         [/if]
@@ -862,6 +863,7 @@
             [unstore_unit]
                 variable=this_item
                 x,y=recall,recall
+                advance=no
             [/unstore_unit]
         [/do]
     [/foreach]
