--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -611,6 +611,7 @@ This does not apply to any unit that the objectives require you to keep alive. E
                     [unstore_unit]
                         variable=this_item
                         x,y=recall,recall
+                        advance=no
                     [/unstore_unit]
                 [/else]
             [/if]
