Frostbite less probable on units with ice attacks

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1206,7 +1206,7 @@
                     [/if]
                 [/case]
                 [case]
-                    value=9,10,11,12,13,14,82
+                    value=9,10
                     [if]
                         {VARIABLE_CONDITIONAL nfw_weapon_type equals ice}
                         [or]
@@ -1215,6 +1215,32 @@
                                 terrain=A*,Ms*,Ha*,Cea^*,Coa^*,Cha^*,Cva^*,Cfa^*,Kea^*,Koa^*,Kha^*,Kva^*,Kfa^*,Rra^*,*^Esa,*^Fpa,*^Feta,*^Fda,*^Fma,*^Voa,*^Vea,*^Vha,*^Vhca,*^Vhha,*^Vca,*^Vla,*^Vaa
                             [/have_location]
                         [/or]
+                        [then]
+                            {NFW_frostbite_WOUND}
+                            {VARIABLE rand_wound_selected yes}
+                        [/then]
+                    [/if]
+                [/case]
+                [case]
+                    value=11,12,13,14,82
+                    [if]
+                        {VARIABLE_CONDITIONAL nfw_weapon_type equals ice}
+                        [or]
+                            [have_location]
+                                {EVENT_UNIT}
+                                terrain=A*,Ms*,Ha*,Cea^*,Coa^*,Cha^*,Cva^*,Cfa^*,Kea^*,Koa^*,Kha^*,Kva^*,Kfa^*,Rra^*,*^Esa,*^Fpa,*^Feta,*^Fda,*^Fma,*^Voa,*^Vea,*^Vha,*^Vhca,*^Vhha,*^Vca,*^Vla,*^Vaa
+                            [/have_location]
+                        [/or]
+                        [not]
+                            [have_location]
+                                {EVENT_UNIT}
+                                [filter]
+                                    [has_attack]
+                                        type=ice
+                                    [/has_attack]
+                                [/filter]
+                            [/have_location]
+                        [/not]
                         [then]
                             {NFW_frostbite_WOUND}
                             {VARIABLE rand_wound_selected yes}
