LOTI Event C1S14 Captured Zorox

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -895,6 +895,22 @@
     [/filter]
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Enslaved" color="100,255,100"}
 [/event]
+[event]
+    name=last_breath
+    id=nfw_zorox_captured
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 14_Shadow_Empire}
+    [/filter_condition]
+    [filter]
+        id=Zorox
+    [/filter]
+    [filter_second]
+        id=Lethalia
+    [/filter_second]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Captured" color="100,255,100"}
+    {VARIABLE nfw_already_wound yes}
+[/event]
 #endif
 
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
