--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -79,6 +79,7 @@
     {CLEAR_VARIABLE nfw_kill_stranded}
     {CLEAR_VARIABLE nfw_disabled}
     {CLEAR_VARIABLE healed_unit}
+    {CLEAR_VARIABLE nfw_alive_units}
 [/event]
 
 [event]
