New Event: P1C2S1 LOTI Umbra vanished

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -895,6 +895,7 @@
     [/filter]
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Enslaved" color="100,255,100"}
 [/event]
+
 [event]
     name=last_breath
     id=nfw_zorox_captured
@@ -909,6 +910,20 @@
         id=Lethalia
     [/filter_second]
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Captured" color="100,255,100"}
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
+[event]
+    name=last_breath
+    id=nfw_umbra_vanished
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 01_The_Beginning}
+    [/filter_condition]
+    [filter]
+        id=Umbra_illusion
+    [/filter]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Vanished" color="100,255,100"}
     {VARIABLE nfw_already_wound yes}
 [/event]
 #endif
