New menu: LOTI AMLA advancements compatibility

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1729,3 +1729,42 @@
     [/while]
     {CLEAR_VARIABLE rand_wound_selected}
 [/event]
+
+#ifdef LOTI_1_OR_2
+[event]
+    name=last_breath
+    id=nfw_loti_amla_removed_die
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_loti_amla equals yes}
+    [/filter_condition]
+    [filter]
+        [filter_wml]
+            [advancement]
+                glob_on_id=NFW_*
+            [/advancement]
+        [/filter_wml]
+        [and]
+            [filter_wml]
+                [advancement]
+                    id=backup_amla
+                [/advancement]
+            [/filter_wml]
+        [/and]
+    [/filter]
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [object]
+            id=nfw_loti_backup_amla
+            [effect]
+                apply_to=remove_advancement
+                amlas=backup_amla
+            [/effect]
+        [/object]
+        [set_variable]
+            name=nfw_backup_amla
+            value=yes
+        [/set_variable]
+    [/modify_unit]
+[/event]
+#endif
