--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -493,6 +493,193 @@
     [/message]
 #enddef
 
+#define NFW_LOTI STATUS MENU
+    [message]
+        speaker=narrator
+        message="<b>"+_"Wounds healing on Legend of the Invincibles"+" → "+"</b>"+_"You can select here if you want to AMLA to healing wounds instead of the powerful personal upgrades available to almost any high level unit. Regardless of this setting, you will be able to switch between the healing set of AMLAs and the default AMLAs at any time by right-clicking on the unit, if it has the possibility. The previous behavior will be maintained (choose between advancements and healings interchangeably), if the unit does not already have the special LOTI advancements."+"
+
+"+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>
+<b><span color='#00E600'>"+_"Switch AMLA menu"+": "+"</span><span color='#00FFFF'>"+"{MENU}"+"</span></b>"
+
+        side_for=$side_number
+        image=misc/loti-big.png
+        [option]
+            label="<b>»</b> "+_"Change status of Wounds healing"
+            [command]
+                [message]
+                    speaker=narrator
+                    message=_"Set status of Wounds healing. If you choose 'yes', in the next unit advancement you will be able to choose between the possible healings of this unit, instead of the powerful upgrades that it has by default. Unless you manually change it with the Switch AMLA menu, it will only activate/deactivate on units that are wounded or have advanced at least once since the time you changed the option."
+                    image=misc/loti-big.png
+                    [option]
+                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        [command]
+                            [set_variable]
+                                name=nfw_loti_amla
+                                value=yes
+                            [/set_variable]
+                            [print]
+                                text=_"Wounds healing"+" → "+_"Set to"+": yes"
+                                size=24
+                                duration=5000
+                                color=0,255,255
+                            [/print]
+                        [/command]
+                    [/option]
+                    [option]
+                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        [command]
+                            [set_variable]
+                                name=nfw_loti_amla
+                                value=no
+                            [/set_variable]
+                            [print]
+                                text=_"Wounds healing"+" → "+_"Set to"+": no"
+                                size=24
+                                duration=5000
+                                color=255,0,0
+                            [/print]
+                        [/command]
+                    [/option]
+                    {NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
+        [option]
+            label="<b>»</b> "+_"Change status of Switch AMLA menu"
+            [command]
+                [message]
+                    speaker=narrator
+                    message=_"Set status of Switch AMLA menu. If you choose 'yes', you will be able to switch at any time between the default LOTI advances or any of the healings. Very useful to choose different options depending on the unit, or when the unit is about to advance and you change your mind."
+                    image=misc/loti-big.png
+                    [option]
+                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        [command]
+                            [set_menu_item]
+                                id=nfw_loti_amla
+                                description=_"Change AMLA to LOTI"
+                                synced=yes
+                                image=misc/loti-mini.png
+                                [show_if]
+                                    [have_unit]
+                                        {EVENT_UNIT}
+                                        [filter_wml]
+                                            [variables]
+                                                nfw_backup_amla=yes
+                                            [/variables]
+                                        [/filter_wml]
+                                        [and]
+                                            [filter_wml]
+                                                [advancement]
+                                                    glob_on_id=NFW_*
+                                                [/advancement]
+                                            [/filter_wml]
+                                        [/and]
+                                        [not]
+                                            [filter_wml]
+                                                [advancement]
+                                                    id=backup_amla
+                                                [/advancement]
+                                            [/filter_wml]
+                                        [/not]
+                                    [/have_unit]
+                                [/show_if]
+                                [command]
+                                    [remove_object]
+                                        {EVENT_UNIT}
+                                        object_id=nfw_loti_backup_amla
+                                    [/remove_object]
+                                    [modify_unit]
+                                        {FILTER_EVENT_UNIT}
+                                        [set_variable]
+                                            name=nfw_backup_amla
+                                            value=no
+                                        [/set_variable]
+                                    [/modify_unit]
+                                    [update_stats]
+                                        {EVENT_UNIT}
+                                    [/update_stats]
+                                [/command]
+                            [/set_menu_item]
+                            [set_menu_item]
+                                id=nfw_healing_amla
+                                description=_"Change AMLA to Healings"
+                                synced=yes
+                                image=misc/loti-mini.png
+                                [show_if]
+                                    [have_unit]
+                                        {EVENT_UNIT}
+                                        [filter_wml]
+                                            [advancement]
+                                                glob_on_id=NFW_*
+                                            [/advancement]
+                                        [/filter_wml]
+                                        [and]
+                                            [filter_wml]
+                                                [advancement]
+                                                    id=backup_amla
+                                                [/advancement]
+                                            [/filter_wml]
+                                        [/and]
+                                    [/have_unit]
+                                [/show_if]
+                                [command]
+                                    [modify_unit]
+                                        {FILTER_EVENT_UNIT}
+                                        [object]
+                                            id=nfw_loti_backup_amla
+                                            [effect]
+                                                apply_to=remove_advancement
+                                                amlas=backup_amla
+                                            [/effect]
+                                        [/object]
+                                        [set_variable]
+                                            name=nfw_backup_amla
+                                            value=yes
+                                        [/set_variable]
+                                    [/modify_unit]
+                                    [update_stats]
+                                        {EVENT_UNIT}
+                                    [/update_stats]
+                                [/command]
+                            [/set_menu_item]
+                            [set_variable]
+                                name=nfw_switch_menu
+                                value=yes
+                            [/set_variable]
+                            [print]
+                                text=_"Switch AMLA menu"+" → "+_"Set to"+": yes"
+                                size=24
+                                duration=5000
+                                color=0,255,255
+                            [/print]
+                        [/command]
+                    [/option]
+                    [option]
+                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        [command]
+                            [clear_menu_item]
+                                id=nfw_healing_amla,nfw_loti_amla
+                            [/clear_menu_item]
+                            [set_variable]
+                                name=nfw_switch_menu
+                                value=no
+                            [/set_variable]
+                            [print]
+                                text=_"Switch AMLA menu"+" → "+_"Set to"+": no"
+                                size=24
+                                duration=5000
+                                color=255,0,0
+                            [/print]
+                        [/command]
+                    [/option]
+                    {NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
+        {NFW_MENU_EXIT}
+    [/message]
+#enddef
+
 [event]
     name=start
     [filter_condition]
@@ -557,9 +744,18 @@
                 [/switch]
             [/command]
         [/option]
+#ifdef LOTI_1_OR_2
         [option]
-            image="misc/nfw-stop.png"
-            label="<b> "+_"Stop Non-Fatal Wounds for this scenario"+"</b>"
+            image=misc/loti-small.png
+            label=_"Wounds healing on Legend of the Invincibles"
+            [command]
+                {NFW_LOTI $nfw_loti_amla $nfw_switch_menu}
+            [/command]
+        [/option]
+#endif
+        [option]
+            image=misc/nfw-stop.png
+            label="<b>"+_"Stop Non-Fatal Wounds for this scenario"+"</b>"
             [show_if]
                 {VARIABLE_CONDITIONAL nfw_disabled not_equals yes}
             [/show_if]
@@ -588,7 +784,7 @@
         [/option]
         [option]
             image="misc/nfw-stop.png"
-            label="<b> "+_"Non-Fatal Wounds is disabled for this scenario"+"</b>"
+            label="<b>"+_"Non-Fatal Wounds is disabled for this scenario"+"</b>"
             [show_if]
                 {VARIABLE_CONDITIONAL nfw_disabled equals yes}
             [/show_if]
