--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -95,3 +95,13 @@
         value=yes
     [/set_variable]
 [/event]
+
+#ifdef CAMPAIGN_LEGEND_OF_THE_INVINCIBLES_PART_I
+#define LOTI_1_OR_2
+#enddef
+#endif
+
+#ifdef CAMPAIGN_LEGEND_OF_THE_INVINCIBLES_PART_II
+#define LOTI_1_OR_2
+#enddef
+#endif
