--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -620,3 +620,91 @@ This does not apply to any unit that the objectives require you to keep alive. E
     [/foreach]
     {CLEAR_VARIABLE nfw_wounded}
 [/event]
+
+#ifdef LOTI_1_OR_2
+[event]
+    name=post advance
+    id=nfw_loti_amla_restored_advance
+    first_time_only=no
+    [filter]
+        [filter_wml]
+            [variables]
+                nfw_backup_amla=yes
+            [/variables]
+        [/filter_wml]
+        [not]
+            [filter_wml]
+                [advancement]
+                    glob_on_id=NFW_*
+                [/advancement]
+            [/filter_wml]
+        [/not]
+        [not]
+            [filter_wml]
+                [advancement]
+                    id=backup_amla
+                [/advancement]
+            [/filter_wml]
+        [/not]
+    [/filter]
+    [remove_object]
+        id=$unit.id
+        object_id=nfw_loti_backup_amla
+    [/remove_object]
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [set_variable]
+            name=nfw_backup_amla
+            value=no
+        [/set_variable]
+    [/modify_unit]
+    [update_stats]
+        id=$unit.id
+    [/update_stats]
+    [floating_text]
+        {EVENT_UNIT}
+        {NFW_COLOR_GREEN}
+        text=_"Recovered"
+    [/floating_text]
+[/event]
+
+[event]
+    name=post advance
+    id=nfw_loti_amla_removed_advance
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_loti_amla equals yes}
+    [/filter_condition]
+    [filter]
+        [filter_wml]
+            [advancement]
+                glob_on_id=NFW_*
+            [/advancement]
+        [/filter_wml]
+        [and]
+            [filter_wml]
+                [advancement]
+                    id=backup_amla
+                [/advancement]
+            [/filter_wml]
+        [/and]
+    [/filter]
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [object]
+            id=nfw_loti_backup_amla
+            [effect]
+                apply_to=remove_advancement
+                amlas=backup_amla
+            [/effect]
+        [/object]
+        [set_variable]
+            name=nfw_backup_amla
+            value=yes
+        [/set_variable]
+    [/modify_unit]
+    [update_stats]
+        id=$unit.id
+    [/update_stats]
+[/event]
+#endif
