Translation and LOTI portraits instead of icons

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -496,20 +496,20 @@
 #define NFW_LOTI STATUS MENU
     [message]
         speaker=narrator
-        message="<b>"+_"Wounds healing on Legend of the Invincibles"+" → "+"</b>"+_"You can select here if you want to AMLA to healing wounds instead of the powerful personal upgrades available to almost any high level unit. Regardless of this setting, you will be able to switch between the healing set of AMLAs and the default AMLAs at any time by right-clicking on the unit, if it has the possibility. The previous behavior will be maintained (choose between advancements and healings interchangeably), if the unit does not already have the special LOTI advancements."+"
+        message="<b>"+_"Wounds healing on Legend of the Invincibles"+" → "+"</b>"+_"You can select here if you want to AMLA to healing wounds instead of the powerful personal upgrades available to almost any high level unit. Regardless of this setting, you will be able to switch between the healing set of AMLAs and the default AMLAs at any time by right-clicking on the unit, if it has the possibility. The default behavior will be maintained (choose between advancements and healings indistinctly), if the unit does not yet have the special LOTI advancements."+"
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>
-<b><span color='#00E600'>"+_"Switch AMLA menu"+": "+"</span><span color='#00FFFF'>"+"{MENU}"+"</span></b>"
+<b><span color='#00E600'>"+_"AMLA switch menu"+": "+"</span><span color='#00FFFF'>"+"{MENU}"+"</span></b>"
 
         side_for=$side_number
-        image=misc/loti-big.png
+        image=portraits/Lethalia.png
         [option]
             label="<b>»</b> "+_"Change status of Wounds healing"
             [command]
                 [message]
                     speaker=narrator
-                    message=_"Set status of Wounds healing. If you choose 'yes', in the next unit advancement you will be able to choose between the possible healings of this unit, instead of the powerful upgrades that it has by default. Unless you manually change it with the Switch AMLA menu, it will only activate/deactivate on units that are wounded or have advanced at least once since the time you changed the option."
-                    image=misc/loti-big.png
+                    message=_"Set status of Wounds healing. If you choose 'yes', in the next unit advancement you will be able to choose between the possible healings of this unit, instead of the powerful upgrades that it has by default. Unless you manually change it with the AMLA switch menu, it will only activate/deactivate on units that are wounded or have advanced at least once since the time you changed the option."
+                    image=portraits/Vritra.png
                     [option]
                         label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
                         [command]
@@ -545,12 +545,12 @@
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"Change status of Switch AMLA menu"
+            label="<b>»</b> "+_"Change status of AMLA switch menu"
             [command]
                 [message]
                     speaker=narrator
-                    message=_"Set status of Switch AMLA menu. If you choose 'yes', you will be able to switch at any time between the default LOTI advances or any of the healings. Very useful to choose different options depending on the unit, or when the unit is about to advance and you change your mind."
-                    image=misc/loti-big.png
+                    message=_"Set status of AMLA switch menu. If you choose 'yes', you will be able to switch at any time between the default LOTI advances or any of the healings. Very useful to choose different options depending on the unit, or when the unit is about to advance and you change your mind."
+                    image=portraits/Delenia.png
                     [option]
                         label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
                         [command]
@@ -647,7 +647,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Switch AMLA menu"+" → "+_"Set to"+": yes"
+                                text=_"AMLA switch menu"+" → "+_"Set to"+": yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -665,7 +665,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Switch AMLA menu"+" → "+_"Set to"+": no"
+                                text=_"AMLA switch menu"+" → "+_"Set to"+": no"
                                 size=24
                                 duration=5000
                                 color=255,0,0
