New event: P1C2S1y2 Elven raised

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -926,6 +926,23 @@
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Vanished" color="100,255,100"}
     {VARIABLE nfw_already_wound yes}
 [/event]
+
+[event]
+    name=last_breath
+    id=nfw_elven_raised
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 01_The_Beginning}
+        [or]
+            {VARIABLE_CONDITIONAL current_scenario_id equals 02_Gods}
+        [/or]
+    [/filter_condition]
+    [filter]
+        id=Shiva,Zambag,Lotor,Ghargalla,Tholor,Ghar`drias,Undoloria,Gar`landak,Ghambar,Khar_dhas,Emraldhor,Amgharth,Ufa,Durandia
+    [/filter]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Raised" {NFW_COLOR_RED}}
+    {VARIABLE nfw_already_wound yes}
+[/event]
 #endif
 
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
