Elves less, woses can't get dendrophobia

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1034,6 +1034,14 @@
                                 {EVENT_UNIT}
                                 terrain=F*,T*,*^F*,*^T*
                             [/have_location]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        race=wose,elf
+                                    [/filter]
+                                [/have_location]
+                            [/not]
                             [then]
                                 {NFW_fear_of_plant_WOUND}
                                 {VARIABLE rand_wound_selected yes}
@@ -1147,6 +1155,14 @@
                                 {EVENT_UNIT}
                                 terrain=F*,T*,*^F*,*^T*
                             [/have_location]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        race=wose
+                                    [/filter]
+                                [/have_location]
+                            [/not]
                             [then]
                                 {NFW_fear_of_plant_WOUND}
                                 {VARIABLE rand_wound_selected yes}
