More precise healing

--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -236,6 +236,9 @@
         [filter_location]
             terrain=W*,S*
         [/filter_location]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
@@ -274,6 +277,9 @@
         [filter_location]
             terrain=M*,H*
         [/filter_location]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
@@ -312,6 +318,9 @@
         [filter_location]
             terrain=A*,D*
         [/filter_location]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
@@ -350,6 +359,9 @@
         [filter_location]
             terrain=U*
         [/filter_location]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
@@ -388,6 +400,9 @@
         [filter_location]
             terrain=F*,T*,*^F*,*^T*
         [/filter_location]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
@@ -430,6 +445,9 @@
                 terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
             [/not]
         [/filter_location]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
@@ -465,6 +483,9 @@
     first_time_only=no
     [filter_second]
         ability=coward_display
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..5)}
     [switch]
@@ -535,6 +556,9 @@
                 [/modifications]
             [/filter_wml]
         [/or]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
 
     [switch]
@@ -593,6 +617,9 @@
                 [/modifications]
             [/filter_wml]
         [/or]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
 
     [switch]
@@ -642,6 +669,9 @@
             {EVENT_SECOND_UNIT}
             time_of_day=lawful
         [/filter_location]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..20)}
     [switch]
@@ -684,6 +714,9 @@
             {EVENT_SECOND_UNIT}
             time_of_day=chaotic
         [/filter_location]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..20)}
     [switch]
@@ -725,6 +758,9 @@
         [filter_side]
             formula="fog"
         [/filter_side]
+        [not]
+            id=$unit.id
+        [/not]
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
