Walking corpses don't speak

--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -139,12 +139,29 @@
             [/filter]
         [/have_location]
         [then]
-            [message]
-                speaker=$unit.id
-                side_for=$unit.side
-                message= _ "Argh, I’m dying!"
-                female_message= _ "female^Argh, I’m dying!"
-            [/message]
+            [if]
+                [have_location]
+                    {EVENT_UNIT}
+                    [filter]
+                        type=Soulless,Walking Corpse
+                    [/filter]
+                [/have_location]
+                [then]
+                    [message]
+                        speaker=$unit.id
+                        side_for=$unit.side
+                        message= _ "Argh!"
+                    [/message]
+                [/then]
+                [else]
+                    [message]
+                        speaker=$unit.id
+                        side_for=$unit.side
+                        message= _ "Argh, I’m dying!"
+                        female_message= _ "female^Argh, I’m dying!"
+                    [/message]
+                [/else]
+            [/if]
             [if]
                 [variable]
                     name=unit.name
