Necrosis 5% with arcane attack

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1612,7 +1612,7 @@
                     [/if]
                 [/case]
                 [case]
-                    value=52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81
+                    value=52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1656,6 +1656,16 @@
                                 {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
+                    [/if]
+                [/case]
+                [case]
+                    value=78,79,80,81
+                    [if]
+                        {VARIABLE_CONDITIONAL nfw_weapon_type equals arcane}
+                        [then]
+                            {NFW_necrosis_WOUND}
+                            {VARIABLE rand_wound_selected yes}
+                        [/then]
                     [/if]
                 [/case]
                 [case]
