--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -259,12 +259,29 @@
                 [/filter]
             [/have_location]
             [then]
-                [message]
-                    speaker=$unit.id
-                    side_for=$unit.side
-                    message= _ "Argh, I’m dying!"
-                    female_message= _ "female^Argh, I’m dying!"
-                [/message]
+                [if]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            type=Soulless,Walking Corpse
+                        [/filter]
+                    [/have_location]
+                    [then]
+                        [message]
+                            speaker=$unit.id
+                            side_for=$unit.side
+                            message= _ "Argh!"
+                        [/message]
+                    [/then]
+                    [else]
+                        [message]
+                            speaker=$unit.id
+                            side_for=$unit.side
+                            message= _ "Argh, I’m dying!"
+                            female_message= _ "female^Argh, I’m dying!"
+                        [/message]
+                    [/else]
+                [/if]
                 [if]
                     [variable]
                         name=unit.name
@@ -428,6 +445,9 @@
                                 [or]
                                     trait=mechanical
                                 [/or]
+                                [or]
+                                    type=Soulless,Walking Corpse
+                                [/or]
                             [/not]
                         [/filter]
                     [/have_location]
@@ -571,12 +591,29 @@
             [/then]
         [/elseif]
         [else]
-            [message]
-                speaker=$unit.id
-                side_for=$unit.side
-                message= _ "Argh, I’m wounded!"
-                female_message= _ "female^Argh, I’m wounded!"
-            [/message]
+            [if]
+                [have_location]
+                    {EVENT_UNIT}
+                    [filter]
+                        type=Soulless,Walking Corpse
+                    [/filter]
+                [/have_location]
+                [then]
+                    [message]
+                        speaker=$unit.id
+                        side_for=$unit.side
+                        message= _ "Argh!"
+                    [/message]
+                [/then]
+                [else]
+                    [message]
+                        speaker=$unit.id
+                        side_for=$unit.side
+                        message= _ "Argh, I’m wounded!"
+                        female_message= _ "female^Argh, I’m wounded!"
+                    [/message]
+                [/else]
+            [/if]
         [/else]
     [/if]
     [if]
