--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -234,7 +234,7 @@
 * <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, any weapon, 3%
 * <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy, 4%
 * <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive, 1%
-* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative, 4% - 2% agoraphobia - 2% aquaphobia on marine units
+* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative, 4% - 2% agoraphobia - 2% aquaphobia on marine units - 2% dendrophobia on elves and 0% on woses
 * <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative, 4%
 * <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability, 1%"
                     side_for=$side_number
@@ -689,6 +689,7 @@
         id=nfw_help
         description=_"NFW help"
         synced=yes
+        image=misc/nfw-menu.png
         [command]
             [fire_event]
                 name=nfw_help_menu
