Take preference to NFW menu

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -686,7 +686,7 @@
         {NFW_ENABLED_HELP}
     [/filter_condition]
     [set_menu_item]
-        id=nfw_help
+        id=anfw_help
         description=_"NFW help"
         synced=yes
         image=misc/nfw-menu.png
